--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   get_it: ^8.0.3
   dartz: ^0.10.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
