--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
       path: plugins/window_size
       ref: main
   equatable: ^2.0.7
+  web_socket_channel: ^3.0.3
 
 dev_dependencies:
   flutter_test:
