--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
       ref: main
   equatable: ^2.0.7
   web_socket_channel: ^3.0.3
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
