--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   equatable: ^2.0.7
   web_socket_channel: ^3.0.3
   path_provider: ^2.1.4
+  archive: ^4.0.7
 
 dev_dependencies:
   flutter_test:
