--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   web_socket_channel: ^3.0.3
   path_provider: ^2.1.4
   archive: ^4.0.7
+  file_picker: ^8.1.2
+  url_launcher: ^6.3.1
+  open_file_plus: ^3.4.1+1
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
